<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_signup_page">Complete your details below</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password_hint">Enter your password</string>
    <string name="hint_email">Enter your email</string>
    <string name="password_invalid">Password cannot be less than 8 characters</string>
    <string name="silahkan_login">Please Login</string>
    <string name="masuk">Login</string>
    <string name="belum_punya_akun">Don\'t have an account?</string>
    <string name="daftar_sekarang">Sign up</string>
    <string name="masuk_sekarang">Login</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
    </string>
    <string name="create_new_story">Create new story</string>
    <string name="enter_your_name">Enter your name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_process">Logging out…</string>
    <string name="story_photo">Story Photo</string>
    <string name="story_name">Story name</string>
    <string name="story_description">Story description</string>
    <string name="story_date">Story date</string>
    <string name="no_stories_available">No stories available</string>
    <string name="welcome">Welcome,</string>
    <string name="gallery">Gallery</string>
    <string name="capture">capture</string>
    <string name="image_preview">Image preview</string>
    <string name="upload">Upload</string>
    <string name="camera_start_failed">Camera start failed</string>
    <string name="please_choose_a_picture_first">Please choose a picture first</string>
    <string name="please_add_description">Please add description</string>
    <string name="camera_is_not_ready">Camera is not ready</string>
    <string name="capture_failed">Capture failed: %1$s</string>
    <string name="story_uploaded_successfully">Story uploaded successfully</string>
    <string name="error">Error: %1$s</string>
    <string name="story_image">Story image</string>

</resources>